@@ -4,6 +4,6 @@ public class Characters
 {
     public static Character valueOf(char c)
     {
-        return new Character(c);
+        return Character.valueOf(c);
     }
 }
