@@ -4,6 +4,6 @@ public class Doubles
 {
     public static Double valueOf(double value)
     {
-        return new Double(value);
+        return Double.valueOf(value);
     }
 }
